--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.pythonPath": "myvenv/bin/python"
+    "python.pythonPath": "myvenv/bin/python",
+    "python.formatting.provider": "autopep8"
 }
