--- a/.config/uwsgi/mysite.ini
+++ b/.config/uwsgi/mysite.ini
@@ -6,7 +6,9 @@ home = ~/miniconda3/envs/myvenv/
 uid = deploy
 gid = deploy
 
-http = :80
+socket = /tmp/mysite.socket
+chmod-socket = 666
+chown-socket = deploy:deploy
 
 enable-threads = true
 master = true
