--- a/.config/uwsgi/daejeonplace.ini
+++ b/.config/uwsgi/daejeonplace.ini
@@ -1,18 +1,18 @@
 [uwsgi]
-chdir = /daejeonplace/daejeonplace/
+chdir = ~/daejeonplace/daejeonplace/
 module = daejeonplace.wsgi:application
 home = ~/miniconda3/envs/myvenv/
 
 uid = deploy
 gid = deploy
 
-socket = /tmp/mysite.socket
+socket = /tmp/daejeonplace.sock
 chmod-socket = 666
 chown-socket = deploy:deploy
 
 enable-threads = true
 master = true
 vacuum = true
-pidfile = /tmp/mysite.pid
-logto = /var/log/uwsgi/mysite/@(exec://date +%%Y-%%m-%%d).log
+pidfile = /tmp/daejeonplace.pid
+logto = /var/log/uwsgi/daejeonplace/@(exec://date +%%Y-%%m-%%d).log
 log-reopen = true
