ec2 에서 내보내기

--- a/.config/uwsgi/daejeonplace.ini
+++ b/.config/uwsgi/daejeonplace.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-chdir = ~/daejeonplace/daejeonplace/
+chdir = ~/daejeonplace/
 module = daejeonplace.wsgi:application
-home = ~/miniconda3/envs/myvenv/
+home = ~/miniconda3/envs/myvenv
 
 uid = deploy
 gid = deploy
