--- a/.config/uwsgi/daejeonplace.ini
+++ b/.config/uwsgi/daejeonplace.ini
@@ -6,7 +6,10 @@ home = /home/ubuntu/miniconda3/envs/myvenv/
 uid = deploy
 gid = deploy
 
-http = :8000
+socket = /tmp/daejeonplace.sock
+chmod-socket = 666
+chown-socket = deploy:deploy
+
 enable-threads = true
 master = true
 vacuum = true
