nginx/daejeonplace.conf 수정

--- a/.config/nginx/daejeonplace.conf
+++ b/.config/nginx/daejeonplace.conf
@@ -7,7 +7,10 @@ server {
     location / {
         uwsgi_pass  unix:///tmp/daejeonplace.sock;
         include     uwsgi_params;
-    
-}
+    }
+
+    location /static/ {
+        alias /daejeonplace/static/
+    }
 
 }
