--- a/.config/nginx/daejeonplace.conf
+++ b/.config/nginx/daejeonplace.conf
@@ -10,7 +10,7 @@ server {
     }
 
     location /static/ {
-        alias /daejeonplace/static/
+        alias /home/ubuntu/daejeonplace/static;
     }
 
 }
